--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-.streamlit/secrets.toml
-.streamlit/secrets.toml
+# Python
+venv/
+__pycache__/
+
+# Environment variables
 .env
+
+# Streamlit secrets
+.streamlit/
 .streamlit/secrets.toml
-.env
-.env
+
